tests/ui/resolve/bad_use_target.rx
//@ spec: RXS-0035, RXS-0038
use nowhere::nothing; //~ ERROR RX1004
fn f() {}
